User messages will have hyperlinked usenames which redirect to their email

--- a/chatbox.html
+++ b/chatbox.html
@@ -1079,7 +1079,7 @@
 										messageElement.setAttribute('data-aos', 'fade-right');
                       const pfp = message.pfp ? `<b><img src="` + message.pfp + `" alt="your_image_description" style="border-radius: 50%; width: 60px; height: 60px; vertical-align: middle;"></b> ` : '';
 										messageElement.innerHTML =
-											"<b>" + pfp + '<button class="delete-button" data-message-id="' + snapshot.key + '"><i class="fa-sharp fa-solid fa-trash"></i></button> ' + dateString + ' ' + timeString + ' - ' + message.user + ":<br><br></b>&nbsp;" +
+											"<b>" + pfp + '<button class="delete-button" data-message-id="' + snapshot.key + '"><i class="fa-sharp fa-solid fa-trash"></i></button> ' + dateString + ' ' + timeString + ' - ' + '<a href="mailto:' + message.email + '" target="_blank">' + message.user + '</a>' + ":<br><br></b>&nbsp;" +
 											parseLinksAndEmojis(removeHtmlTags(message.message));
 										document.getElementById("latest").scrollIntoView();
 setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
@@ -1091,7 +1091,7 @@ setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 											messageElement.setAttribute('data-aos', 'fade-right');
                       const pfp = message.pfp ? `<b><img src="` + message.pfp + `" alt="your_image_description" style="border-radius: 50%; width: 60px; height: 60px; vertical-align: middle;"></b> ` : '';
 										messageElement.innerHTML =
-												"<b>" + pfp + dateString + ' ' + timeString + ' - ' + message.user + ":</b><br><br>&nbsp;" +
+												"<b>" + pfp + dateString + ' ' + timeString + ' - ' + '<a href="mailto:' + message.email + '" target="_blank">' + message.user + '</a>' + ":</b><br><br>&nbsp;" +
 												parseLinksAndEmojis(removeHtmlTags(message.message));
 											//document.getElementById("latest").scrollIntoView();
 setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
@@ -1102,7 +1102,7 @@ setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 											messageElement.setAttribute('data-aos', 'fade-right');
                       const pfp = message.pfp ? `<b><img src="` + message.pfp + `" alt="your_image_description" style="border-radius: 50%; width: 60px; height: 60px; vertical-align: middle;"></b> ` : '';
 										messageElement.innerHTML =
-												"<b>" + pfp + '<button class="delete-button" data-message-id="' + snapshot.key + '"><i class="fa-sharp fa-solid fa-trash"></i></button> ' + dateString + ' ' + timeString + ' - ' + message.user + ":<br><br></b>&nbsp;" +
+												"<b>" + pfp + '<button class="delete-button" data-message-id="' + snapshot.key + '"><i class="fa-sharp fa-solid fa-trash"></i></button> ' + dateString + ' ' + timeString + ' - ' + '<a href="mailto:' + message.email + '" target="_blank">' + message.user + '</a>' + ":<br><br></b>&nbsp;" +
 												parseLinksAndEmojis(removeHtmlTags(message.message));
 											//document.getElementById("latest").scrollIntoView();
 setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
@@ -1118,7 +1118,7 @@ setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 									messageElement.setAttribute('data-aos', 'fade-right');
                       const pfp = message.pfp ? `<b><img src="` + message.pfp + `" alt="your_image_description" style="border-radius: 50%; width: 60px; height: 60px; vertical-align: middle;"></b> ` : '';
 										messageElement.innerHTML =
-										"<b>" + pfp + dateString + ' ' + timeString + ' - ' + message.user + ":</b><br><br>&nbsp;" +
+										"<b>" + pfp + dateString + ' ' + timeString + ' - ' + '<a href="mailto:' + message.email + '" target="_blank">' + message.user + '</a>' + ":</b><br><br>&nbsp;" +
 										parseLinksAndEmojis(removeHtmlTags(message.message));
 									//document.getElementById("latest").scrollIntoView();
 setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
@@ -1149,7 +1149,7 @@ setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 											messageElement.setAttribute('data-aos', 'fade-right');
                       const pfp = message.pfp ? `<b><img src="` + message.pfp + `" alt="your_image_description" style="border-radius: 50%; width: 60px; height: 60px; vertical-align: middle;"></b> ` : '';
 										messageElement.innerHTML =
-												"<b>" + pfp + '<button class="delete-button" data-message-id="' + snapshot.key + '"><i class="fa-sharp fa-solid fa-trash"></i></button> ' + dateString + ' ' + timeString + ' - ' + message.user + ":<br><br></b>&nbsp;" +
+												"<b>" + pfp + '<button class="delete-button" data-message-id="' + snapshot.key + '"><i class="fa-sharp fa-solid fa-trash"></i></button> ' + dateString + ' ' + timeString + ' - ' + '<a href="mailto:' + message.email + '" target="_blank">' + message.user + '</a>' + ":<br><br></b>&nbsp;" +
 												parseLinksAndEmojis(removeHtmlTags(message.message));
 											document.getElementById("latest").scrollIntoView();
 setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
@@ -1160,7 +1160,7 @@ setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 												messageElement.setAttribute('data-aos', 'fade-right');
                       const pfp = message.pfp ? `<b><img src="` + message.pfp + `" alt="your_image_description" style="border-radius: 50%; width: 60px; height: 60px; vertical-align: middle;"></b> ` : '';
 										messageElement.innerHTML =
-													"<b>" + pfp + dateString + ' ' + timeString + ' - ' + message.user + ":</b><br><br>&nbsp;" +
+													"<b>" + pfp + dateString + ' ' + timeString + ' - ' + '<a href="mailto:' + message.email + '" target="_blank">' + message.user + '</a>' + ":</b><br><br>&nbsp;" +
 													parseLinksAndEmojis(removeHtmlTags(message.message));
 												document.getElementById("latest").scrollIntoView();
 setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
@@ -1170,7 +1170,7 @@ setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 												messageElement.setAttribute('data-aos', 'fade-right');
                       const pfp = message.pfp ? `<b><img src="` + message.pfp + `" alt="your_image_description" style="border-radius: 50%; width: 60px; height: 60px; vertical-align: middle;"></b> ` : '';
 										messageElement.innerHTML =
-													"<b>" + pfp + '<button class="delete-button" data-message-id="' + snapshot.key + '"><i class="fa-sharp fa-solid fa-trash"></i></button> ' + dateString + ' ' + timeString + ' - ' + message.user + ":<br><br></b>&nbsp;" +
+													"<b>" + pfp + '<button class="delete-button" data-message-id="' + snapshot.key + '"><i class="fa-sharp fa-solid fa-trash"></i></button> ' + dateString + ' ' + timeString + ' - ' + '<a href="mailto:' + message.email + '" target="_blank">' + message.user + '</a>' + ":<br><br></b>&nbsp;" +
 													parseLinksAndEmojis(removeHtmlTags(message.message));
 												document.getElementById("latest").scrollIntoView();
 setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
@@ -1183,7 +1183,7 @@ setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 									messageElement.setAttribute('data-aos', 'fade-right');
                       const pfp = message.pfp ? `<b><img src="` + message.pfp + `" alt="your_image_description" style="border-radius: 50%; width: 60px; height: 60px; vertical-align: middle;"></b> ` : '';
 										messageElement.innerHTML =
-										"<b>" + pfp + dateString + ' ' + timeString + ' - ' + message.user + ":</b><br><br>&nbsp;" +
+										"<b>" + pfp + dateString + ' ' + timeString + ' - ' + '<a href="mailto:' + message.email + '" target="_blank">' + message.user + '</a>' + ":</b><br><br>&nbsp;" +
 										parseLinksAndEmojis(removeHtmlTags(message.message));
 									document.getElementById("latest").scrollIntoView();
 setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
